--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,16 +31,20 @@
         </activity>
         <activity
             android:name=".FamilyActivity"
-            android:label="@string/category_family" />
+            android:label="@string/category_family"
+            android:parentActivityName="com.example.android.miwok.MainActivity"/>
         <activity
             android:name=".NumbersActivity"
-            android:label="@string/category_numbers" />
+            android:label="@string/category_numbers"
+            android:parentActivityName="com.example.android.miwok.MainActivity"/>
         <activity
             android:name=".ColorsActivity"
-            android:label="@string/category_colors" />
+            android:label="@string/category_colors"
+            android:parentActivityName="com.example.android.miwok.MainActivity"/>
         <activity
             android:name=".PhrasesActivity"
-            android:label="@string/category_phrases" />
+            android:label="@string/category_phrases"
+            android:parentActivityName="com.example.android.miwok.MainActivity"/>
     </application>
 
 </manifest>
